<resources>
    <string name="app_name">LoginRegisterThreading</string>
    <string name="signin">Signin</string>
    <string name="message">doesn\'t have an account? Click here to singup</string>
    <string name="login">LOGIN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="middlename">MiddleName</string>
    <string name="register">REGISTER</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="signup">Signup</string>
    <string name="confirm_password">Confirm Password</string>
</resources>