<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_700"
    tools:context=".Register">

    <EditText
        android:id="@+id/ConfirmPasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/SignupButton"
        app:layout_constraintStart_toStartOf="@+id/PasswordEditText"
        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText" />

    <TextView
        android:id="@+id/RegisterTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="serif-monospace"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/FirstNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/PasswordEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ConfirmPasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/UsernameEditText"
        app:layout_constraintTop_toBottomOf="@+id/UsernameEditText" />

    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/PasswordEditText"
        app:layout_constraintStart_toStartOf="@+id/LastNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/LastNameEditText" />

    <EditText
        android:id="@+id/LastNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/UsernameEditText"
        app:layout_constraintStart_toStartOf="@+id/FirstNameEditText"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameEditText" />

    <EditText
        android:id="@+id/FirstNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="35dp"
        android:background="@drawable/back"
        android:ems="10"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/LastNameEditText"
        app:layout_constraintStart_toStartOf="@+id/RegisterTextView"
        app:layout_constraintTop_toBottomOf="@+id/RegisterTextView" />

    <Button
        android:id="@+id/SignupButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/signup"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ConfirmPasswordEditText" />

</androidx.constraintlayout.widget.ConstraintLayout>